--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,8 +23,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        python -m pip3 install --upgrade pip 
-        pip3 install pipenv
+        python -m pip install --upgrade pip 
+        pip install pipenv
 #        apt install libpq-dev
 #       
 #        cd /vagrant/givitsite/
