--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,10 +25,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip 
         pip install pipenv
-#        apt install libpq-dev
-#       
-#        cd /vagrant/givitsite/
-#        pipenv sync
+        apt install libpq-dev
+        cd /vagrant/givitsite/
+        pipenv sync
+        
 #     - name: DB creation
 #       run: |
 #         apt install postgresql postgresql-contrib postgresql-common postgresql-client 
