--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,15 +25,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip 
         pip install pipenv
-        apt install libpq-dev
         cd /vagrant/givitsite/
         pipenv sync
+#        apt install libpq-dev
         
-#     - name: DB creation
-#       run: |
-#         apt install postgresql postgresql-contrib postgresql-common postgresql-client 
-#         sudo -u postgres createdb givit 
-#         sudo -u postgres psql -c "ALTER ROLE postgres WITH PASSWORD 'givit';" 
+    - name: DB creation
+      run: |
+        sudo apt install postgresql postgresql-contrib postgresql-common postgresql-client 
+        sudo -u postgres createdb givit 
+        sudo -u postgres psql -c "ALTER ROLE postgres WITH PASSWORD 'givit';" 
         
 #     - name: Run Tests
 #       run: |
