--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip 
+        cd givitsite
         pip install pipenv
         pipenv sync
 #        apt install libpq-dev
