--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,10 +25,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip 
         pip install pipenv
+        sudo apt install libpq-dev
         cd givitsite
         ls -l
         pipenv sync
-#        apt install libpq-dev
+       
         
     - name: DB creation
       run: |
