--- a/.github/workflows/initial_CI.yml
+++ b/.github/workflows/initial_CI.yml
@@ -1,8 +1,6 @@
 name: Django CI
 
 on:
-#   push:
-#     branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -19,22 +17,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    - name: Install Dependencies
+    - name: Install Dependencies using bootstrap.sh and migrate
       run: |
         python -m pip install --upgrade pip 
-        pip install pipenv
-        cd givitsite
-        pipenv sync
-       
-        
-    - name: DB creation
-      run: |
-        sudo apt install postgresql postgresql-contrib postgresql-common postgresql-client libpq-dev
-        sudo systemctl start postgresql
-        sudo -u postgres createdb givit 
-        sudo -u postgres psql -c "ALTER ROLE postgres WITH PASSWORD 'givit';" 
-        
-    - name: migrate
-      run: |
-        cd givitsite
-        pipenv run python3 manage.py migrate
+        run ./bootstrap.sh
