--- a/.github/workflows/initial_CI.yml
+++ b/.github/workflows/initial_CI.yml
@@ -8,8 +8,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 20
+#     strategy:
+#       max-parallel: 2
 
     steps:
     - uses: actions/checkout@v2
