--- a/.github/workflows/boostrap-workflow.yml
+++ b/.github/workflows/boostrap-workflow.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         cd givitsite
         pipenv run pytest -s -v
-
-    - name: Agura test
-      if: github.event.pull_request.merged == true 
-       echo "agura test" 
+        
+    - if: github.event.pull_request.merged == true 
+      name: Agura test
+      run: echo "agura test" 
